<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_coppel"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/icon_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/icon_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/card_guideline"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/icon_end_guideline"
        app:layout_constraintStart_toStartOf="@id/icon_start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/wild_sand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_guideline">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/l_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/l_margin" />

        <TextView
            android:id="@+id/sign_in_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name_text_input_layout"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:nextFocusDown="@id/password_text_input_edit_text"
            app:endIconDrawable="@drawable/ic_account"
            app:endIconMode="custom"
            app:layout_constraintBottom_toTopOf="@+id/last_name_text_input_layout"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:textColor="@color/yellow_coppel"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/lastname"
            android:nextFocusDown="@id/password_text_input_edit_text"
            app:endIconDrawable="@drawable/ic_account"
            app:endIconMode="custom"
            app:layout_constraintBottom_toTopOf="@+id/email_text_input_layout"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:textColor="@color/yellow_coppel"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:nextFocusDown="@id/password_text_input_edit_text"
            app:endIconDrawable="@drawable/icv_email"
            app:endIconMode="custom"
            app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@color/background"
                android:textColor="@color/yellow_coppel"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="100"
                android:textColor="@color/yellow_coppel"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_size"
            android:layout_gravity="bottom"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/grey_rounded"
            android:elevation="10dp"
            android:enabled="false"
            android:padding="@dimen/default_margin"
            android:text="@string/sign_up_act_register"
            android:textAllCaps="false"
            android:textColor="@color/white"

            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/yellow_coppel"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="372dp"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/s_margin"
            android:text="@string/sign_up_act_login"
            android:textColor="@color/blue_coppel"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>